# SoulsSaveManager

./: .gitignore  AGENTS.md  CHANGELOG-ERSaveManager.md  CHANGELOG-Praxis.md  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: release-praxis.yml  release-saveman.yml
docs/: DS3SaveFormatResearch.md
docs/superpowers/plans/: 2026-06-03-separate-releases.md
docs/superpowers/specs/: 2026-06-03-separate-releases-design.md
src/ERSaveManager/: CMakeLists.txt  README.md  app.rc  embedded_regulation_1_02_1.h  face_dialog.c  locale.c  locale.h  main.c  resource.h  ui_controls.c
src/Praxis/: CMakeLists.txt  README.md  app.rc  backend_registry.c  config.c  ds2_test_format.h  ds3_test_format.h  dsr_test_format.h  game_backend.h  locale.c  locale.h  main.c  praxis_hotkey_actions.c  praxis_hotkey_actions.h  praxis_import_executor.c  praxis_import_executor.h  praxis_import_scanner.c  praxis_import_scanner.h  praxis_main_menu.c  praxis_selftest.c  praxis_selftest.h  praxis_toast.c  praxis_toast.h  praxis_window_common.c  profile_store.c  profile_store.h  profile_store_io.c  resource.h  sekiro_test_format.h  selftest_ds2.c  selftest_ds2.h  selftest_dsr.c  selftest_dsr.h  selftest_main.c  selftest_sekiro.c  selftest_sekiro.h  toolbar.c  toolbar.h
src/Praxis/backends/: ds2_backend.c  ds3_backend.c  dsr_backend.c  er_backend.c  sekiro_backend.c
src/Praxis/dialogs/: edit_game_profile.c  game_profile_manager.c  import_dialog.c  import_dialog.h
src/common/: CMakeLists.txt  ds2save.c  ds2save.h  ds3save.c  ds3save.h  dsrsave.c  dsrsave.h  ersave.c  ersave.h  file_dialog.c  file_dialog.h  sekirosave.c  sekirosave.h  theme_core.c  theme_core.h  ui_layout.h
